--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h2>hello world</h2>
     <h3>etoyr</h3>
-    <p>dsghkjdfhgklj</p>
+    <p>dsghkjdfhgkljgit checkout master</p>
 </body>
 </html>
